# speecher

./: .gitignore  AGENTS.md  CMakeLists.txt  CONTEXT.md  LICENSE  Makefile  README.md  ydotool-output-plan.html
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/research/: 0001-plasma-6-wayland-capabilities.md  0002-claude-voice-session-contract.md
packaging/: build-appimage.sh  local.speecher.desktop  local.speecher.setup-ydotool.policy.in  post-install.cmake.in
prototypes/settings-shell/: README.md  app.js  index.html  package.json  serve.js  style.css
src/app/: ApplicationController.cpp  ApplicationController.h  SingleInstanceIpc.cpp  SingleInstanceIpc.h  main.cpp
src/core/: AppSettings.h  AudioCapture.cpp  AudioCapture.h  BindingProcessor.cpp  BindingProcessor.h  CliToolDiscovery.cpp  CliToolDiscovery.h  MediaPauseController.cpp  MediaPauseController.h  OutputMethod.cpp  OutputMethod.h  SecretStore.cpp  SecretStore.h  SettingsStore.cpp  SettingsStore.h  TranscriptState.cpp  TranscriptState.h  VocabularyLimit.cpp  VocabularyLimit.h  WordPreview.cpp  WordPreview.h
src/dictation/: DictationInterfaces.h  DictationSession.cpp  DictationSession.h  DictationTypes.cpp  DictationTypes.h
src/output/: ClipboardDelivery.cpp  ClipboardDelivery.h  DeliveryResult.h  QtClipboardDelivery.cpp  QtClipboardDelivery.h  TextDelivery.cpp  TextDelivery.h  WlClipboardDelivery.cpp  WlClipboardDelivery.h  WtypeDelivery.cpp  WtypeDelivery.h  YdotoolDelivery.cpp  YdotoolDelivery.h  YdotoolSetup.cpp  YdotoolSetup.h
src/platform/: PlatformIntegration.cpp  PlatformIntegration.h
src/providers/: AnthropicApiRefiner.cpp  AnthropicApiRefiner.h  AnthropicTranscriptRefiner.cpp  AnthropicTranscriptRefiner.h  ClaudeCodeSessionRefiner.cpp  ClaudeCodeSessionRefiner.h  ClaudeCredentials.cpp  ClaudeCredentials.h  ClaudeSpeechTranscriber.cpp  ClaudeSpeechTranscriber.h  ClaudeVoiceClient.cpp  ClaudeVoiceClient.h  OpenAiAuthProvider.cpp  OpenAiAuthProvider.h  OpenAiRefiner.cpp  OpenAiRefiner.h  OpenAiTranscriptRefiner.cpp  OpenAiTranscriptRefiner.h  ProviderRegistry.cpp  ProviderRegistry.h  TranscriptRefinementPrompt.h
src/setup/: YdotoolSetupHelper.cpp
src/ui/: MainWindow.cpp  MainWindow.h  SettingsDialog.cpp  SettingsDialog.h  Theme.cpp  Theme.h  TranscriberPopup.cpp  TranscriberPopup.h  WaveformWidget.cpp  WaveformWidget.h  WaylandLayerShell.cpp  WaylandLayerShell.h
tests/: test_core.cpp
